--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Program from "../components/Program.astro";
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>RDI Workshop</title>
-  <link rel="icon" href="/src/assets/fairagro.ico" type="image/x-icon" />
+  <link rel="icon" href="./src/assets/fairagro.ICO" type="image/x-icon" />
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -92,7 +92,7 @@ import Program from "../components/Program.astro";
   <header>
     <h1>
       <img
-        src="/src/assets/fairagro.ico"
+        src="./src/assets/fairagro.ICO"
         alt="FAIRagro Icon"
         style="width: 32px; height: 32px; vertical-align: middle;"
       /> Middleware - RDI Workshop
