feat: add Coordinators component and update icon imports for consistency

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,5 +1,5 @@
 ---
-
+import Cordinators from "./Cordinators.astro"
 ---
 
 <style>
@@ -29,5 +29,6 @@
   <p>
     Save the date:
     <strong>Septembre 8, 2025 12:00 to Septembre 9, 2025 13:00</strong>
+    <Cordinators
   </p>
 </section>
