--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,14 @@
 ---
 import About from "../components/About.astro";
 import Program from "../components/Program.astro";
-import Icon from "../assets/fairagro.ico";
+import icon from "../assets/fairagro.ico";
 ---
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>RDI Workshop</title>
-  <link rel="icon" href={Icon} type="image/x-icon" />
+  <link rel="icon" href={icon} type="image/x-icon" />
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -93,7 +93,7 @@ import Icon from "../assets/fairagro.ico";
   <header>
     <h1>
       <img
-        src={Icon}
+        src={icon}
         alt="FAIRagro Icon"
         style="width: 32px; height: 32px; vertical-align: middle;"
       /> Middleware - RDI Workshop
