--- a/src/components/Location.astro
+++ b/src/components/Location.astro
@@ -2,7 +2,7 @@
 const { address, city, country, mapSrc } = Astro.props;
 ---
 
-<section class="bg-light-gray dark:bg-dark-gray p-5 rounded-lg shadow-md mb-5">
+<section class="bg-light-gray dark:bg-dark-gray p-5 rounded-lg shadow-md mb-5 border border-gray-300 dark:border-gray-700">
   <h2 class="text-teal dark:text-lime text-2xl mb-3">Location</h2>
   <p class="text-lg text-black dark:text-white mb-1">{address}</p>
   <p class="text-lg text-black dark:text-white mb-1">{city}</p>
