--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -2,11 +2,11 @@
 import Cordinators from "./Cordinators.astro";
 ---
 
-<section class="bg-light-gray p-5 rounded-lg shadow-md mb-5">
-  <h2 class="text-teal text-2xl mb-3">About the Workshop</h2>
-  <p class="text-lg text-black">
+<section class="bg-light-gray dark:bg-dark-gray p-5 rounded-lg shadow-lg mb-5 border border-gray-300 dark:border-gray-700">
+  <h2 class="text-teal dark:text-lime text-2xl mb-3">About the Workshop</h2>
+  <p class="text-lg text-black dark:text-white">
     Save the date:
-    <strong class="text-lime">Septembre 8, 2025 12:00 to Septembre 9, 2025 13:00</strong>
+    <strong class="text-lime dark:text-lime">Septembre 8, 2025 12:00 to Septembre 9, 2025 13:00</strong>
   </p>
   <Cordinators />
 </section>
