--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import About from "../components/About.astro";
+import Program from "../components/Program.astro";
 import iconImage from "../assets/fairagro.ico";
 import Location from "../components/Location.astro";
 ---
@@ -29,16 +30,22 @@ import Location from "../components/Location.astro";
   </header>
   <div class="container mx-auto p-5 pb-20">
     <About />
+    <Program />
     <Location
-      address="Chausseestraße 111, 10115"
-      city="Berlin"
+      address="Chausseestraße 111"
+      city="10115, Berlin"
       country="Germany"
       mapSrc="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13340.212368957287!2d13.383692653463354!3d52.52727676579079!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a851ecc019df9b%3A0xb80319b2b8cca8bd!2sLeibniz-Gemeinschaft!5e0!3m2!1sde!2sde!4v1738068512777!5m2!1sde!2sde"
     />
   </div>
-  <footer
-    class="bg-black dark:bg-teal text-white text-center py-4 fixed bottom-0 w-full"
-  >
-    <p>© 2025 FAIRagrp - Measure 4.2 RDI Workshop. All rights reserved.</p>
+  <footer class="bg-black dark:bg-teal text-white text-center py-4 fixed bottom-0 w-full">
+    <div class="flex items-center justify-center">
+      <img
+        src={iconImage}
+        alt="FAIRagro Icon"
+        class="inline-block w-6 h-6 mr-2"
+      />
+      <p>© 2025 FAIRagrp - Measure 4.2 RDI Workshop. All rights reserved.</p>
+    </div>
   </footer>
 </body>
