fix: update footer text for accuracy in copyright notice

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ import Location from "../components/Location.astro";
         alt="FAIRagro Icon"
         class="inline-block w-6 h-6 mr-2"
       />
-      <p>© 2025 FAIRagrp - Measure 4.2 RDI Workshop. All rights reserved.</p>
+      <p>© 2025 FAIRagro - Measure 4.2 Middleware & RDIs Workshop. All rights reserved.</p>
     </div>
   </footer>
 </body>
