fix: update title and footer text for accuracy in workshop details

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Location from "../components/Location.astro";
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>RDI Workshop</title>
+  <title>FAIRagro middleware workshop</title>
   <link rel="icon" href={iconImage} type="image/x-icon" />
   <link
     rel="stylesheet"
@@ -45,7 +45,7 @@ import Location from "../components/Location.astro";
         alt="FAIRagro Icon"
         class="inline-block w-6 h-6 mr-2"
       />
-      <p>© 2025 FAIRagro - Measure 4.2 Middleware & RDIs Workshop. All rights reserved.</p>
+      <p>© 2025 FAIRagro - Measure 4.2 Middleware Workshop. All rights reserved.</p>
     </div>
   </footer>
 </body>
