--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,10 @@ import Location from "../components/Location.astro";
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FAIRagro middleware workshop</title>
+  <title>
+    Middleware and Research Data Infrastructures (RDIs) Workshop: Expanding the
+    FAIRagro Network in the Agrosystem Community
+  </title>
   <link rel="icon" href={iconImage} type="image/x-icon" />
   <link
     rel="stylesheet"
@@ -19,13 +22,15 @@ import Location from "../components/Location.astro";
   <header class="bg-teal dark:bg-teal text-white py-6 text-center shadow-lg">
     <div class="container mx-auto flex flex-col items-center">
       <h1 class="text-3xl font-bold flex items-center">
-      <img
-        src={iconImage}
-        alt="FAIRagro Icon"
-        class="inline-block w-10 h-10 mr-3"
-      /> Middleware - RDI Workshop
-    </h1>
-    <p class="mt-2 text-lg">FAIRagro Measure 4.2 workshop</p>
+        <img
+          src={iconImage}
+          alt="FAIRagro Icon"
+          class="inline-block w-10 h-10 mr-3"
+        /> Middleware and Research Data Infrastructures (RDIs) Workshop
+      </h1>
+      <p class="mt-2 text-lg">
+        Expanding the FAIRagro Network in the Agrosystem Community
+      </p>
     </div>
   </header>
   <div class="container mx-auto p-5 pb-20">
@@ -38,14 +43,18 @@ import Location from "../components/Location.astro";
       mapSrc="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13340.212368957287!2d13.383692653463354!3d52.52727676579079!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a851ecc019df9b%3A0xb80319b2b8cca8bd!2sLeibniz-Gemeinschaft!5e0!3m2!1sde!2sde!4v1738068512777!5m2!1sde!2sde"
     />
   </div>
-  <footer class="bg-black dark:bg-teal text-white text-center py-4 fixed bottom-0 w-full">
+  <footer
+    class="bg-black dark:bg-teal text-white text-center py-4 fixed bottom-0 w-full"
+  >
     <div class="flex items-center justify-center">
       <img
         src={iconImage}
         alt="FAIRagro Icon"
         class="inline-block w-6 h-6 mr-2"
       />
-      <p>© 2025 FAIRagro - Measure 4.2 Middleware Workshop. All rights reserved.</p>
+      <p>
+        © 2025 FAIRagro - Measure 4.2 - Middleware and Research Data Infrastructures (RDIs) Workshop. All rights reserved.
+      </p>
     </div>
   </footer>
 </body>
